docs: fix benchmark plan based on big data expert review
Fix 4 critical issues: (1) overhead decomposition now uses slowlog not explain-extracted DSL (explain != executed DSL for Calcite), (2) add cold-plan scenario to detect plan caching, (3) aggregation queries use request_cache=false + random thresholds, (4) change default to 3-shard (1-shard overstates SQL disadvantage 2-3x). Add 5 important fixes: pushdown on/off comparison, result-set equivalence audit, sliding-window warmup detection, concurrent throughput test, Calcite stats injection caveat. Add E4 large UNION memory pressure scenario, F1-F3 auxiliary scenarios, decision matrix, and architecture risk section. Fix extension pattern classification (3-step pattern only applies to plan-level routing, not function/expression/statement level). Add stats injection as P0 priority workstream (highest ROI for Calcite CBO).

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>
Signed-off-by: taozhang314 <42579706+TomZhang2@users.noreply.github.com>